<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/dpsnmundark"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/homeTextView"
        android:layout_marginTop="@dimen/big_margin"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorAccent"
        android:fontFamily="sans-serif-thin"
        android:textSize="50sp" />

    <ScrollView
        android:scrollbarThumbVertical="@drawable/scroll_color"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commit"
                android:textColor="?attr/colorAccent"
                android:fontFamily="sans-serif-light"
                android:textSize="30sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/clouds"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:paddingLeft="@dimen/big_margin"
                    android:paddingRight="@dimen/big_margin"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:src="@drawable/rsz_logo" />

                <ImageView
                    android:paddingLeft="@dimen/big_margin"
                    android:paddingRight="@dimen/big_margin"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="match_parent"
                    android:src="@drawable/rsz_unic" />
            </LinearLayout>
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/collab"
                android:textColor="@color/clouds"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
